[package]
name = "tags"
version = "0.1.0"
authors = ["shirenn <shirenn@crans.org>"]
edition = "2018"
description = "A small utility to edit audio tags"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taglib = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
clap = "2.33"
tempfile = "3.0.4"
